Fix bottom spacing on list

--- a/css/style.sass
+++ b/css/style.sass
@@ -38,7 +38,7 @@ header
 
 section
   padding: 1em
-  margin-top: 3em
+  margin: 3em 0 7em 0
 
 .container
   width: 100%
